--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -396,3 +396,16 @@ packages:
 #      - args: ['make', '-j@PARALLELISM@']
 #      - args: ['make', 'DESTDIR=@THIS_COLLECT_DIR@', 'install']
 #      - args: ['ln', '-sf', '/usr/bin/bash', '@THIS_COLLECT_DIR@/usr/bin/sh']
+
+  - name: doomgeneric
+    source:
+      subdir: 'sources'
+      git: 'https://github.com/ozkl/doomgeneric.git'
+      branch: 'master'
+      commit: '2d9b24f07c78c36becf41d89db30fa99863463e5'
+    tools_required:
+      - host-llvm
+    build:
+      - args: ['make', '-C', '@THIS_SOURCE_DIR@/doomgeneric', '-f', 'Makefile.zaos', '-j@PARALLELISM@']
+      - args: ['mkdir', '-p', '@THIS_COLLECT_DIR@/usr/bin']
+      - args: ['cp', '@THIS_SOURCE_DIR@/doomgeneric/doomgeneric', '@THIS_COLLECT_DIR@/usr/bin/doomgeneric']
